Get the text under highlight/squiggly/underline/strikethrough annotations (bug 1885505)
and add an invisible element containing the text in the annotation layer to make
it readable by a screen reader.

--- a/web/annotation_layer_builder.css
+++ b/web/annotation_layer_builder.css
@@ -126,6 +126,16 @@
         display: none;
       }
     }
+
+    .highlightedText {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 0;
+      height: 0;
+      display: inline-block;
+      overflow: hidden;
+    }
   }
 
   .textLayer.selecting ~ & section {
